fixed update profile
