# docs/swagger.json
@@ -920,7 +920,13 @@
         "entity.UpdateUserBody": {
             "type": "object",
             "properties": {
+                "avatar": {
+                    "type": "string"
+                },
                 "full_name": {
+                    "type": "string"
+                },
+                "language": {
                     "type": "string"
                 },
                 "phone_number": {
